--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.main.allow-circular-references=true
 springdoc.api-docs.path=/api-docs
-server.port=8092
-
+upload.dir=uploads/resumes
 
