--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.main.allow-circular-references=true
 springdoc.api-docs.path=/api-docs
 upload.dir=uploads/resumes
+server.port=8092
 
